--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*
 
 # API keys or secrets
 *.key
@@ -20,6 +21,7 @@ __pycache__/
 *.pyd
 venv/
 env/
+
 
 # Logs
 *.log
